<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="center"
            android:padding="32dp"
            android:text="@string/app_name"
            android:textColor="@color/colorPrimary"
            android:textSize="42sp" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <EditText
                android:id="@+id/email_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/txt_email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/txt_password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="16dp">

                <Button
                    android:id="@+id/custom_signin_button"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:tag="custom_login_button"
                    android:text="@string/btn_signIn"
                    android:background="@color/colorPrimary"
                    android:layout_marginEnd="6dp"
                    android:layout_marginStart="5dp"
                    style="?android:attr/buttonBarButtonStyle"/>

                <Button
                    android:id="@+id/custom_signup_button"
                    android:layout_width="0dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:tag="custom_signup_button"
                    android:text="@string/btn_signUp"
                    android:background="@color/colorPrimary"
                    android:layout_marginStart="6dp"
                    android:layout_marginEnd="5dp"
                    style="?android:attr/buttonBarButtonStyle"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1.5dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:layout_marginEnd="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_or"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="normal"
                    android:textSize="16sp"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="1.5dp"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:layout_marginStart="10dp"/>


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <com.facebook.login.widget.LoginButton
                    android:id="@+id/facebook_login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp" />

            </LinearLayout>

        </LinearLayout>

</LinearLayout>